upgrade code as per latest libs
Signed-off-by: Mukesh Rajput <msr5464@gmail.com>